[package]
name = "bevying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevying"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
async-channel = "2.3.1"
bevy = { version = "0.14.2"}
bevy_mod_debugdump = "0.11.1"
bevy_mod_sysfail = "7.0.0"
kanal = "0.1.0-pre8"
pyo3 = "0.22.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
