[package]
name = "bevying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevying"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.93"
async-channel = "2.3.1"
bevy_mod_debugdump = "0.11.1"
bevy_mod_sysfail = "7.0.0"
big-brain = "0.21.1"
crossbeam-queue = "0.3.11"
image = "0.25.5"
kanal = "0.1.0-pre8"
pyo3 = "0.22.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[dependencies.bevy]
version = "0.14.2"
default-features = true
features = ["trace"]

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [ "cli" ]
